
#------------------------------------------------------------------------------------#
#                        Plug-in directories                                         #
#------------------------------------------------------------------------------------#
add_subdirectory(callback)
add_subdirectory(nlp)
add_subdirectory(hts_labels)
